12.blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: blue
  labels:
    app: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue
      tier: blue
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: blue
        tier: blue
    spec:
      containers:
      - image: php:7.4-apache
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
        name: blue
        volumeMounts:
        - name: index
          mountPath: /var/www/html
          # subPath: index.php
      volumes:
      - name: index
        configMap:
          name: index
