14.green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: green
  labels:
    app: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
      tier: green
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: green
        tier: green
    spec:
      containers:
      - image: php:7.4-apache
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
        name: green
        volumeMounts:
        - name: index
          mountPath: /var/www/html
          # subPath: index.php
      volumes:
      - name: index
        configMap:
          name: index
