05.wp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: ttt
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
