15.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: blue
  labels:
    app: blue
spec:
  ports:
    - port: 80
  selector:
    app: blue
---
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: green
  labels:
    app: green
spec:
  ports:
    - port: 80
  selector:
    app: green
---
