08.wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: ttt
spec:
  ingressClassName: nginx
  rules:
  - host: ttt.mreji.net
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ttt.mreji.net
    secretName: ttt-mreji-net
