18.policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: blue
spec:
  podSelector: {

    }
  policyTypes:
  - Ingress
  - Egress
